@@ -1,0 +1,69 @@
+
+""" Find missing blobs                                                                                                                                                                                                                       
+"""                                                                                                                                                                                                                                          
+from ZODB.utils import oid_repr                                                                                                                                                                                                              
+import os                                                                                                                                                                                                                                    
+import binascii                                                                                                                                                                                                                              
+import logging                                                                                                                                                                                                                               
+                                                                                                                                                                                                                                             
+logger = logging.getLogger('eea')                                                                                                                                                                                                            
+                                                                                                                                                                                                                                             
+def FindMissingBlobs(self):                                                                                                                                                                                                                  
+                                                                                                                                                                                                                                             
+    from Products.CMFCore.utils import getToolByName                                                                                                                                                                                         
+    res = {}                                                                                                                                                                                                                                 
+    cat = getToolByName(self, 'portal_catalog', None)                                                                                                                                                                                        
+                                                                                                                                                                                                                                             
+    query = {                                                                                                                                                                                                                                
+        'portal_type': ['EEAFigureFile', 'Image', 'ImageFS', 'Blob', 'DataFile', 'EpubFile', 'File', 'FlashFile',                                                                                                                            
+                        'FactSheetDocument', 'Article', 'Highlight', 'Promotion', 'Speech', 'PressRelease',                                                                                                                                  
+                        'Publication'],                                                                                                                                                                                                      
+        #'portal_type': ['EEAFigureFile'],                                                                                                                                                                                                   
+        #'getId': ['term-2009-18-capacity-of.xls', 'annual-mean-no2-concentration-observed'],                                                                                                                                                
+        'Language': 'all',                                                                                                                                                                                                                   
+    }                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                             
+    brains = cat(**query)                                                                                                                                                                                                                    
+                                                                                                                                                                                                                                             
+    i = 0                                                                                                                                                                                                                                    
+    for k in brains[:1000]:                                                                                                                                                                                                                  
+        i += 1                                                                                                                                                                                                                               
+        obj = k.getObject()                                                                                                                                                                                                                  
+        blob_path = getBlobOid(obj)                                                                                                                                                                                                          
+        logger.info('###--- %s *** %s *** /%s' % (i, k.getPath(), blob_path))                                                                                                                                                                
+        filefield = obj.getFile()                                                                                                                                                                                                            
+        filesize = filefield.get_size()                                                                                                                                                                                                      
+                                                                                                                                                                                                                                             
+    logger.info('Report done.')                                                                                                                                                                                                              
+    return "Done."                                                                                                                                                                                                                           
+                                                                                                                                                                                                                                             
+def getBlobOid(self):                                                                                                                                                                                                                        
+    if self.portal_type in ['EEAFigureFile', 'Blob', 'DataFile', 'EpubFile', 'File',                                                                                                                                                         
+                            'FlashFile', 'FactSheetDocument']:                                                                                                                                                                               
+        field = self.getField('file')                                                                                                                                                                                                        
+    else:                                                                                                                                                                                                                                    
+        field = self.getField('image')                                                                                                                                                                                                       
+                                                                                                                                                                                                                                             
+    blob = field.getRaw(self).getBlob()                                                                                                                                                                                                      
+    oid = blob._p_oid                                                                                                                                                                                                                        
+    serial = blob._p_serial
+
+    filename = field.getRaw(self).getFilename()                                                                                                                                                                                              
+                                                                                                                                                                                                                                             
+    directories = []                                                                                                                                                                                                                         
+    # Create the bushy directory structure with the least significant byte                                                                                                                                                                   
+    # first                                                                                                                                                                                                                                  
+    for byte in str(oid):                                                                                                                                                                                                                    
+        directories.append('0x%s' % binascii.hexlify(byte))                                                                                                                                                                                  
+    path = os.path.sep.join(directories)                                                                                                                                                                                                     
+                                                                                                                                                                                                                                             
+    nice_serial = "0x"+"".join([binascii.hexlify(x) for x in serial]) + ".blob"                                                                                                                                                              
+    #xnice_serial = []                                                                                                                                                                                                                       
+    #for x in str(serial):                                                                                                                                                                                                                   
+        #xnice_serial.append('0x%s' % binascii.hexlify(x))                                                                                                                                                                                   
+    #nice_serial = os.path.sep.join(xnice_serial)                                                                                                                                                                                            
+                                                                                                                                                                                                                                             
+                                                                                                                                                                                                                                             
+    #cached = blob._p_blob_committed                                                                                                                                                                                                         
+    return '%s/%s' % (path, nice_serial)
+
